Fix page width and disable horizontal scroll, especially on smaller devices. Closes #25

--- a/css/main.scss
+++ b/css/main.scss
@@ -362,3 +362,10 @@ i:hover {
   }
 }
 
+
+html, body {
+  /** Disable horizontal scroll on smaller devices **/
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
